--- a/roles/httpd/handlers/main.yml
+++ b/roles/httpd/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 # handlers file for roles/httpd
 
-- name: restart "{{ package_svc }}"
+- name: restart {{ package_svc }}
   service:
     name: "{{ package_svc }}"
     state: restarted
