--- a/playbook-httpd.yml
+++ b/playbook-httpd.yml
@@ -1,7 +1,7 @@
 ---
-- name: Instalacao do DHCP SERVER
-  hosts: server
+- name: Instalacao do Apache
+  hosts: web_server
   become: true
 
   roles:
-    - dhcpd
+    - httpd
